--- a/src/WRA.Umbraco.Web/wwwroot/css/src/_image.scss
+++ b/src/WRA.Umbraco.Web/wwwroot/css/src/_image.scss
@@ -98,7 +98,8 @@
         margin-bottom: 10px;
     }
     
-    > img {
+    > img,
+    > .svg-wrapper {
         position: relative;
         z-index: 1;
     }
